test/success/integration/_succ_type_func_1.hs
x :: Int -> Int -> Bool
main = print "hello"