test/fail/integration/_fail_grammar_expr_relge_1.hs
x :: Bool
x = jl >= 3
main = print "hello"